<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="csc472.project2.browningjamesprogrammingassignment4.MainActivity"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="1">

    <GridLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#b2ff59"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAlignment="textEnd"
            android:layout_row="0"
            android:layout_column="4" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAlignment="textEnd"
            android:layout_row="1"
            android:layout_column="4" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textAlignment="textEnd"
            android:layout_row="2"
            android:layout_column="4" />

        <TextView
            android:text="@string/myTv"
            android:id="@+id/myTV"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black"
            android:layout_height="match_parent"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:text="@string/currentChannel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/currentChannel"
            android:textAlignment="center"
            android:layout_row="2"
            android:layout_column="2" />

        <TextView
            android:text="@string/volLabel"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:id="@+id/speakerVolLabel"
            android:textAlignment="center"
            android:layout_row="1"
            android:layout_column="2" />

        <TextView
            android:text="@string/tvPowerLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tvPowerLabel"
            android:textAlignment="center"
            android:layout_row="0"
            android:layout_column="2" />

    </GridLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@android:color/background_light"
        android:gravity="start|end"
        android:layout_gravity="start|end"
        android:layout_weight="0.82">

        <Button
            android:text="@string/CNN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button14"
            android:layout_toStartOf="@+id/button14"
            android:id="@+id/button13" />

        <Button
            android:text="@string/sling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/button13"
            android:id="@+id/button12" />

        <Button
            android:text="@string/down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button11"
            android:layout_above="@+id/button14"
            android:layout_alignParentEnd="true" />

        <Button
            android:text="@string/up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button11"
            android:layout_toEndOf="@+id/button12"
            android:id="@+id/button10" />

        <Button
            android:text="@string/eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button11"
            android:layout_toEndOf="@+id/button10"
            android:id="@+id/button8" />

        <Button
            android:text="@string/seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button8"
            android:layout_toEndOf="@+id/button9"
            android:id="@+id/button7" />

        <Button
            android:text="@string/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6"
            android:layout_alignBaseline="@+id/button7"
            android:layout_alignBottom="@+id/button7"
            android:layout_alignStart="@+id/button9" />

        <Button
            android:text="@string/nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button9"
            android:layout_alignBaseline="@+id/button10"
            android:layout_alignBottom="@+id/button10"
            android:layout_toStartOf="@+id/button10" />

        <Button
            android:text="@string/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button8"
            android:layout_alignParentEnd="true"
            android:id="@+id/button5" />

        <Button
            android:text="@string/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button5"
            android:layout_toEndOf="@+id/button6"
            android:id="@+id/button4" />

        <Button
            android:text="@string/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button6"
            android:layout_toStartOf="@+id/button7"
            android:id="@+id/button3" />

        <Button
            android:text="@string/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button5"
            android:layout_toEndOf="@+id/button4"
            android:id="@+id/button2" />

        <Button
            android:text="@string/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button2"
            android:layout_toEndOf="@+id/button3"
            android:id="@+id/button1" />

        <Button
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button4"
            android:layout_alignStart="@+id/button3"
            android:id="@+id/button0" />

        <Button
            android:text="@string/youtube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/button14" />

        <TextView
            android:text="@string/channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button3"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="12dp"
            android:id="@+id/textView11"
            android:layout_toStartOf="@+id/button0" />

        <TextView
            android:text="@string/favChannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button9"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/button12" />

        <TextView
            android:text="@string/vol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_alignBottom="@+id/volumeSeekBar"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/button0"
            android:layout_alignTop="@+id/volumeSeekBar" />

        <TextView
            android:text="@string/power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/powerSwitch"
            android:layout_above="@+id/textView9"
            android:layout_alignTop="@+id/powerSwitch" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/volumeSeekBar"
            android:layout_above="@+id/button2"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView9" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/powerSwitch"
            android:textAlignment="center"
            android:layout_above="@+id/volumeSeekBar"
            android:layout_alignStart="@+id/volumeSeekBar"
            android:layout_toStartOf="@+id/button2" />

        <TextView
            android:text="@string/myRemoteControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myRemoteControlTextView"
            android:textAlignment="center"
            android:textSize="22sp"
            android:fontFamily="sans-serif"
            android:textColor="#505050"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/textView3" />

    </RelativeLayout>

</LinearLayout>
